# note-manager

./: README.md  delete-cluster.sh  docker-compose.prod.yml  docker-compose.yml  run-cluster.sh
backend/: .env.example  .env.production  Dockerfile  pyproject.toml  requirements.txt
backend/src/: auth.py  database.py  main.py  models.py  schemas.py
backend/src/routes/: admin.py  notes.py
frontend/: .env.example  .env.prod  .env.production  Dockerfile.prod  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: auth.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Providers.tsx
frontend/src/entites/: note.ts  tokenRefresh.ts
frontend/src/entities/: refreshToken.ts
frontend/src/hooks/: useAdminDeleteNote.ts  useAdminFetchNotes.ts  useCreateNote.ts  useDeleteNote.ts  useFetchAdminNotes.ts  useFetchNotes.ts
frontend/src/schemas/: noteSchema.ts
grafana/: Dockerfile  dashboards.yml  datasources.yml  fastapi_dashboard.json
keycloak/: .env.example  Dockerfile  note-manager-realm.json  note_manager_realm.json
kubernetes/: backend-config-map.yml  backend-deployment.yml  backend-hpa.yml  backend-secret-map.yml  backend-service.yml  database-secret-map.yml  database-service.yml  database-stateful-set.yml  frontend-deployment.yml  frontend-hpa.yml  frontend-service.yml  grafana-config-map.yml  grafana-deployment.yml  grafana-service.yml  keycloak-config-map.yml  keycloak-deployment.yml  keycloak-hpa.yml  keycloak-secret-map.yml  keycloak-service.yml  prometheus-deployment.yml
prometheus/: Dockerfile  prometheus.yml
(+19 files in other folders)
