[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Paw565pl <paw565pl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
fastapi-keycloak-middleware = "^0.4.2"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
brotli-asgi = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
